add codes for connector

--- a/xnet.vcxproj
+++ b/xnet.vcxproj
@@ -19,8 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\common\guard.hpp" />
+    <ClInclude Include="include\common\no_copy_able.hpp" />
     <ClInclude Include="include\detail\detail.hpp" />
-    <ClInclude Include="include\detail\guard.hpp" />
     <ClInclude Include="include\detail\iocp.hpp" />
     <ClInclude Include="include\xnet.hpp" />
   </ItemGroup>
