--- a/xnet.vcxproj.filters
+++ b/xnet.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="include\common\guard.hpp">
       <Filter>头文件\common</Filter>
     </ClInclude>
+    <ClInclude Include="include\detail\select.hpp">
+      <Filter>头文件\detail</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\xnet.cpp">
