--- a/xnet.vcxproj
+++ b/xnet.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="include\common\guard.hpp" />
     <ClInclude Include="include\common\no_copy_able.hpp" />
     <ClInclude Include="include\detail\detail.hpp" />
+    <ClInclude Include="include\detail\epoll.hpp" />
     <ClInclude Include="include\detail\iocp.hpp" />
     <ClInclude Include="include\detail\select.hpp" />
     <ClInclude Include="include\xnet.hpp" />
