--- a/xnet.vcxproj.filters
+++ b/xnet.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="include\detail\exceptions.hpp">
       <Filter>头文件\detail</Filter>
     </ClInclude>
+    <ClInclude Include="include\detail\timer.hpp">
+      <Filter>头文件\detail</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\xnet.cpp">
