fix complie error

--- a/samples/client/Makefile
+++ b/samples/client/Makefile
@@ -1,2 +1,16 @@
-client:
-	g++ -o client client.cpp -I ../../include -std=c++11
+CFLAGS = -g -W \
+-O3 \
+-Wall \
+-Wpointer-arith \
+-Wshadow \
+-Wno-long-long \
+-Wformat \
+-DACL_PREPARE_COMPILE \
+-I ../../include \
+-std=c++11
+
+client:rm_client
+	g++ -o client client.cpp $(CFLAGS) 
+rm_client:
+	$(shell if [ -f client ]; then rm client; fi;)
+
