--- a/samples/server/Makefile
+++ b/samples/server/Makefile
@@ -1,2 +1,16 @@
-server:
-	g++ server.cpp -o server -I ../../include
+CFLAGS = -g -W \
+-O3 \
+-Wall \
+-Wpointer-arith \
+-Wshadow \
+-Wno-long-long \
+-Wformat \
+-Winvalid-pch \
+-std=c++11 \
+-I ./../../include
+
+server:rm_server
+	g++ server.cpp $(CFLAGS) -o server
+rm_server:
+	$(shell if [ -f server ]; then rm server; fi;)
+
